# event

./: .gitignore  README.md  pyproject.toml  update_data.py
data/: single_mode_event_choice_reward.json  single_mode_unique_chara.json  skill_data.json  text_data.json
event_tracker/: career_store.py  cli.py  diff.py  names.py  rewards.py  store.py  watcher.py
js/: hook_network.js  il2cpp_helpers.js
lib/: attach.py
