[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "frida>=16.0",
    "msgpack>=1.0",
]

[project.scripts]
event-tracker = "event_tracker.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["event_tracker"]
